7일 유지되는 토큰 기능 - 클라이언트 업데이트

--- a/static/index.html
+++ b/static/index.html
@@ -111,6 +111,10 @@
                             $(this).html(localStorage.getItem("login_id"))
                         })
 
+                        if(data.new_token){
+                            localStorage.setItem("password", data.new_token)
+                        }
+
                         resolve(data.data)
                     },
                 });
