도움말 사용법 페이지

--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,10 @@
 <hr>
 
 <div class="copyleft">
-    <span>2021. <a href="https://works.miscthings.net">MiscThings</a></span>
+    <span>
+        2021. <a target="_blank" href="https://works.miscthings.net">MiscThings</a>,
+        <a target="_blank" href="https://works.miscthings.net/8473586c-4975-4175-afd6-c46e0a7a19fd">도움말 &centerdot; 사용법</a>
+    </span>
 </div>
 
 <script>
