--- a/static/index.html
+++ b/static/index.html
@@ -58,9 +58,9 @@
         <!--        </div>-->
     </div>
 
-
-    <div>
-        <button style="width: 100%;" onclick="window.location = 'qr.html'">강의실 추가</button>
+    <div style="display: flex; justify-content: space-around; width: 100%; flex-flow: row wrap;">
+        <button style="flex-grow: 1;" onclick="window.location = 'baroqr.html'">바로 출석</button>
+        <button style="flex-grow: 1;" onclick="window.location = 'qr.html'">강의실 추가</button>
     </div>
 </div>
 
