--- a/static/baroqr.html
+++ b/static/baroqr.html
@@ -234,7 +234,7 @@
     }
 
     function checkQRData(data) {
-        return /\b[0-9a-fA-F]{31,65}\b/.test(data)
+        return /^[0-9a-fA-F]{31,65}$/.test(data)
     }
 
     function captureQRData(cid) {
