--- a/static/introduce.html
+++ b/static/introduce.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-touch-icon-152x152.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png" />
-    <title>DU Attend v2</title>
+    <title>DU Attend v2 소개 페이지</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"/>
@@ -43,7 +43,7 @@
 <body>
 
 <div style="padding-left: 0.5em; padding-right: 0.5em">
-    <h1 style="text-align: center;">로그인/가입</h1>
+    <h1 style="text-align: center;">DU Attend 소개</h1>
     <hr>
 
     <div class="f18" id="alert">
