새창 버그 수정

--- a/static/index.html
+++ b/static/index.html
@@ -166,7 +166,7 @@
             $("#classroom_list").append(`<div style="margin-bottom: 1em;" >
             <span class="f18"><span>${e.name}</span> 강의실 <br></span>
             <span class="f16">→</span>
-            <a class="attend_lnk f16" href="${url}" target="_blank">출석</a> 또는
+            <a class="attend_lnk f16" href="${url}">출석</a> 또는
             <a id="editdig-trigger" href="#" class="f16" onclick="renameclassroom(${i})">편집</a> 또는
             <a id="editdig-trigger" href="#" class="f16" onclick="deleteclassroom(${i})">삭제</a>
         </div>`)
