--- a/static/index.html
+++ b/static/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="sentry-trace" content="{{ trace }}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon"/>
-    <link rel="apple-touch-icon" href="icon/apple-touch-icon.png"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-touch-icon-57x57.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-touch-icon-72x72.png"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="icon/apple-touch-icon-76x76.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="icon/apple-touch-icon-114x114.png"/>
-    <link rel="apple-touch-icon" sizes="120x120" href="icon/apple-touch-icon-120x120.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-touch-icon-144x144.png"/>
-    <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-touch-icon-152x152.png"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon-180x180.png"/>
+    <link rel="shortcut icon" href="/static/icon/favicon.ico" type="image/x-icon"/>
+    <link rel="apple-touch-icon" href="/static/icon/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/static/icon/apple-touch-icon-57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/icon/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/icon/apple-touch-icon-76x76.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/icon/apple-touch-icon-114x114.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/icon/apple-touch-icon-120x120.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/icon/apple-touch-icon-144x144.png"/>
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/icon/apple-touch-icon-152x152.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/icon/apple-touch-icon-180x180.png"/>
 
     <title>DU Attend v2</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
+    <link rel="stylesheet" href="/static/bootstrap-grid.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"/>
-    <script src="jquery-3.6.0.min.js"></script>
-    <script src="sentry.min.js"></script>
+    <script src="/static/jquery-3.6.0.min.js"></script>
+    <script src="/static/sentry.min.js"></script>
     <style>
         body {
             font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
@@ -51,6 +52,10 @@
         안녕하세요, <a href="user.html" class="login_id"></a>님!
     </div>
 
+<!--    22-04 프로모션 구간-->
+    {% include 'promotion_202204_indexbox.html' %}
+<!--    22-04 프로모션 구간 끝-->
+
     <div id="classroom_list" style="margin-top: 1em; margin-bottom: 2em">
         <!--        <div>-->
         <!--            <span class="f18"><span>사랑빛자유프로젝트</span> 강의실 <br>→ </span>-->
@@ -65,13 +70,12 @@
     </div>
 </div>
 
-<hr>
-
 <div class="copyleft">
+    <hr>
     <span>
-        2021. <a target="_blank" href="https://works.miscthings.net">MiscThings</a>,
+        2021. <a target="_blank" href="https://works.miscthings.net">MiscThings 동아리</a>,
         <a target="_blank"
-           href="https://works.miscthings.net/8473586c-4975-4175-afd6-c46e0a7a19fd">도움말 &centerdot; 사용법</a>
+           href="introduce.html">도움말 &centerdot; 사용법</a>
     </span>
 </div>
 
