--- a/static/login.html
+++ b/static/login.html
@@ -3,39 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="sentry-trace" content="{{ trace }}"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/static/icon/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/static/icon/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/static/icon/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/static/icon/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/static/icon/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/static/icon/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/static/icon/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/static/icon/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/static/icon/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/icon/apple-touch-icon-180x180.png" />
     <title>DU Attend v2</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-    <link rel="stylesheet" href="/static/bootstrap-grid.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"/>
-    <script src="/static/jquery-3.6.0.min.js"></script>
-    <script src="/static/sentry.min.js"></script>
+    {% include 'fragment/header.html' %}
     <style>
-        body {
-            font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
-        }
-
-        .f18 {
-            font-size: 1.6em;
-        }
-
-        .copyleft {
-            margin-top: 1em;
-            font-size: 0.8em;
-            text-align: center;
-        }
-
         .mt-1 {
             margin-top: 1em;
         }
@@ -71,11 +41,11 @@
     <div>
         <ul>
             <li>학번은 출석체크 URL을 생성하는 데 필요합니다.</li>
-            <li>개인정보를 일체 저장하지 않기 때문에 암호 분실시 문의를 통해 재설정하셔야 합니다.<br>기억할 수 있는 암호로 설정해 주세요!</li>
             <li>암호는 서버에 <a
                     href="https://ko.wikipedia.org/wiki/%EC%95%94%ED%98%B8%ED%99%94_%ED%95%B4%EC%8B%9C_%ED%95%A8%EC%88%98">단방향
                 해시</a>하여 저장합니다. 관리자도 해독할 수 없습니다.
             </li>
+            <li><a href="password_reset.html">패스워드 분실 문의 →</a></li>
         </ul>
     </div>
 
@@ -84,12 +54,7 @@
     </div>
 </div>
 
-<div class="copyleft" style="padding-left: 0.5em; padding-right: 0.5em">
-    <hr>
-    2021. <a target="_blank" href="https://works.miscthings.net">MiscThings 동아리</a>,
-    <a target="_blank"
-       href="/static/introduce.html">도움말 &centerdot; 사용법</a>
-</div>
+{% include 'fragment/footer.html' %}
 
 <script>
     let reg_mode = false;
