문의 링크 수정

--- a/static/promotion_202204.html
+++ b/static/promotion_202204.html
@@ -94,16 +94,15 @@
         </div>
 
         <h2>의견·문의</h2>
-        <span>문의 시스템은 현재 공사중 입니다. 불편하시겠지만 아래 메일로 연락 부탁드립니다.</span>
         <div>
             <ul>
-                <li>패스워드 분실 문의 → <a href="mailto:attend.du@dlnk.io">attend.du@dLnk.io</a></li>
-                <li>기타 의견·문의 → <a href="mailto:attend.du@dlnk.io">attend.du@dLnk.io</a></li>
+                <li><a target="_blank" href="/static/password_reset.html">패스워드 분실 문의 <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
+                <li><a target="_blank" href="/static/report.html" >제보·문의·의견(로그인 필요) <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
             </ul>
         </div>
 
         <h2>만든이</h2>
-        <span>MiscThings 동아리 → <a href="https://works.miscthings.net/" target="_blank">works.miscthings.net</a></span>
+        <span>MiscThings 동아리 → <a href="https://works.miscthings.net/" target="_blank">works.miscthings.net <i class="fa-solid fa-arrow-up-right-from-square"></i></a></span>
         <div>
             <ul>
                 <li><span onclick="alert('이승욱')">승우기</span>: 프론트엔드, 테스트, 교정, 홍보</li>
