--- a/static/fragment/header.html
+++ b/static/fragment/header.html
@@ -16,6 +16,14 @@
 <script src="https://kit.fontawesome.com/3694f6fd31.js" crossorigin="anonymous"></script>
 <script src="/static/jquery-3.6.0.min.js"></script>
 <script src="/static/sentry.min.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W60L1V7RMC"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-W60L1V7RMC');
+</script>
 <style>
     body {
         font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
