--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="sentry-trace" content="{{ trace }}"/>
     <title>DU Attend v2</title>
     {% include 'fragment/header.html' %}
-</head>
+</head> 
 <body>
 
 <div>
@@ -17,7 +17,7 @@
     </div>
 
 <!--    22-04 프로모션 구간-->
-    {% include 'promotion_202204_indexbox.html' %}
+<!--    {% include 'promotion_202204_indexbox.html' %}-->
 <!--    22-04 프로모션 구간 끝-->
 
     <div id="classroom_list" style="margin-top: 1em; margin-bottom: 2em">
