carousel 넘기는 시간 변경

--- a/static/fragment/carousel.html
+++ b/static/fragment/carousel.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
     <!--    <ol class="carousel-indicators">-->
     <!--        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
     <!--        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
@@ -7,15 +7,15 @@
     <div class="carousel-inner">
 
 
-
-<!--        <div class="carousel-item active">-->
-<!--            <img class="d-block w-100" src="/static/image/banner_2205_result.png" alt="5월 친구소개 스타벅스 이벤트 당첨자 확인">-->
-<!--        </div>-->
-
+        <div class="carousel-item active">
+            <a href="/2204/result">
+                <img class="d-block w-100" src="/static/image/banner_2205_result.png" alt="5월 친구소개 스타벅스 이벤트 당첨자 확인">
+            </a>
+        </div>
 
 
         <!--        DEFAULT BANNER-->
-        <div class="carousel-item active">
+        <div class="carousel-item">
             <a href="https://miscthings.net" target="_blank">
                 <img class="d-block w-100" src="/static/image/miscthings.png" alt="MiscThings 프로젝트 바로가기">
             </a>
