--- a/static/fragment/footer.html
+++ b/static/fragment/footer.html
@@ -7,3 +7,8 @@
     <a href="/static/report.html"><i class="fa-solid fa-bullhorn"></i> 의견·문의</a>,
     <a href="/"><i class="fa-solid fa-house"></i> 홈으로</a>
 </div>
+
+<div class="copyleft version" style="margin-top: 0.2em !important;">
+
+</div>
+<script src="/static/version.js"></script>
