아이디 입력 형식 숫자로 제한

--- a/static/login.html
+++ b/static/login.html
@@ -24,7 +24,7 @@
     <div id="login_form" style="margin-top: 2em; margin-bottom: 2em">
         <div class="mt-1">
             <label for="username">학번(숫자 8자리)</label>
-            <input type="text" id="username">
+            <input type="number" id="username" pattern="[0-9]*" inputmode="numeric">
         </div>
 
         <div class="mt-1">
