버전 정보 수정

--- a/static/fragment/footer.html
+++ b/static/fragment/footer.html
@@ -8,7 +8,7 @@
     <a href="/"><i class="fa-solid fa-house"></i> 홈으로</a>
 </div>
 
-<div class="copyleft version" style="margin-top: 0.2em !important;">
-
+<div class="copyleft" style="margin-top: 0.2em !important;">
+    <a href="https://status.miscthings.net/status/miscthings" class="version"></a>
 </div>
 <script src="/static/version.js"></script>
